# rosette

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  release.toml  rosette.toml
.github/workflows/: build.yml  ci.yml  release-desktop.yml  release-python.yml
app/: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: theme-preload.js
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs  state.rs
app/src/components/canvas/: Canvas.tsx  ImageOverlay.tsx  InstanceLabels.tsx  LaserCursor.tsx  MarqueeBox.tsx  PathPreview.tsx  PathSelectionOverlay.tsx  PolygonPreview.tsx  RulerOverlay.tsx  TextOverlay.tsx  ZoomBox.tsx  use-renderer.ts
app/src/components/ui/: AreaDialog.tsx  ArrayDialog.tsx  CommandPalette.tsx  ContextMenu.tsx  Explorer.tsx  GoToDialog.tsx  InspectorPanel.tsx  LayersPanel.tsx  Minimap.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  Tooltip.tsx  UpdateNotification.tsx  ViolationsPanel.tsx
app/src/hooks/: use-breakpoint.ts  use-keyboard-focus.ts  use-keyboard-shortcuts.ts  use-laser.ts  use-library.ts  use-move.ts  use-path.ts  use-polygon.ts  use-rectangle.ts  use-resize.ts  use-ruler.ts  use-selection.ts  use-text.ts  use-wasm.ts  use-zoom.ts
app/src/lib/: align.ts  commands.ts  constants.ts  file-ops.ts  format.test.ts  format.ts  image-ops.ts  minimap.ts  palette-commands.ts  path.ts  ruler-hittest.ts  snap.ts  tauri.ts  text.ts  utils.ts
app/src/lib/commands/: cell.ts  element.ts  helpers.ts  image.ts  index.ts  instance.ts  layer.ts  ruler.ts  text.ts  types.ts  viewport-placement.ts
app/src/stores/: area-dialog.ts  array-dialog.ts  cell-drag.ts  clipboard.ts  command-palette.ts  context-menu.ts  document.ts  explorer.ts  goto-dialog.ts  history.ts  image.ts  keyboard-focus.ts  laser.ts  layer.ts  marquee.ts  minimap.ts  palette.json  path.ts  ruler-geometry.test.ts  ruler-geometry.ts  ruler.ts  selection.ts  status-message.ts  tabs.ts  text.ts  tool.ts  ui.ts  viewport.ts  violations.ts  wasm-context.ts  zoom.ts
app/src/wasm/: rosette_wasm.d.ts
crates/rosette-checks/: Cargo.toml  README.md
crates/rosette-checks/src/: bend_radius.rs  config.rs  connectivity.rs  lib.rs  runner.rs  violation.rs
crates/rosette-connectivity/: Cargo.toml
crates/rosette-connectivity/src/: config.rs  lib.rs  runner.rs  violation.rs
crates/rosette-core/: Cargo.toml  README.md
crates/rosette-core/src/: cell.rs  error.rs  flatten.rs  layer.rs  lib.rs  port.rs
crates/rosette-core/src/component/: component.rs  connection.rs  mod.rs  route.rs
crates/rosette-core/src/geometry/: bbox.rs  boolean_ops.rs  mod.rs  point.rs  polygon.rs  transform.rs  utils.rs
crates/rosette-dfm/: Cargo.toml  README.md
crates/rosette-dfm/src/: compare.rs  contour.rs  lib.rs  model.rs  rasterize.rs  result.rs
crates/rosette-drc/: Cargo.toml  README.md
crates/rosette-drc/benches/: README.md  drc.rs  fixtures.rs
crates/rosette-drc/src/: cache.rs  convert.rs  error.rs  lib.rs  rules.rs  runner.rs  violation.rs
crates/rosette-drc/src/checks/: acute_angle.rs  angle.rs  area.rs  density.rs  edge_length.rs  enclosure.rs  grid.rs  max_width.rs  mod.rs  not_inside.rs  overlap.rs  self_intersection.rs  spacing.rs  spatial.rs  width.rs
crates/rosette-drc/src/runner/: mod.rs  tests.rs
crates/rosette-io/: Cargo.toml  README.md
crates/rosette-io/src/: lib.rs
crates/rosette-io/src/gds/: constants.rs  error.rs  mod.rs  reader.rs  writer.rs
crates/rosette-io/src/json/: mod.rs  reader.rs  writer.rs
crates/rosette-python/: Cargo.toml  README.md
crates/rosette-python/src/: checks.rs  connectivity.rs  dfm.rs  drc.rs  geometry.rs  io.rs  layout.rs  lib.rs  render.rs  route.rs
crates/rosette-raster/: Cargo.toml  README.md
crates/rosette-raster/src/: lib.rs  palette.rs  render.rs  transform.rs
crates/rosette-wasm/: Cargo.toml  README.md
crates/rosette-wasm/src/: grid.rs  lib.rs  library.rs  renderer.rs  shapes.rs  text_to_polygons.rs  viewport.rs  violation_markers.rs
crates/rosette-wasm/src/renderer/: buffers.rs  mod.rs
crates/rosette-wasm/src/shaders/: border.wgsl  crosshair.wgsl  grid.wgsl  laser.wgsl  mod.rs  outline.wgsl  polygon.wgsl
designs/: basic_shapes.py  components_gallery.py  connectivity_fail.py  connectivity_pass.py  dfm_test.py  drc_showcase.py  gc_loopback.py  hero_showcase.py  primitives_gallery.py  rosette.toml
python/rosette/: __init__.py  _core.pyi  _design.py  _patcher.py  _serve.py  _server.py  cli.py
python/rosette/_source/: __init__.py
python/rosette/components/: __init__.py  _curves.py  _tapers.py  _utils.py  bend.py  bragg_grating.py  crossing.py  directional_coupler.py  edge_coupler.py  grating_coupler.py  mmi.py  ring.py  sbend.py  spiral.py  taper.py  waveguide.py  ybranch.py
python/rosette/templates/blank/: AGENTS.md.template  CLAUDE.md.template  agent-rules.md.template  (+2 more)
python/tests/: __init__.py  conftest.py  test_checks.py  test_cli.py  test_cli_shot.py  test_components.py  test_connectivity.py  test_curves.py  test_dfm.py  test_drc.py  test_geometry.py  test_io.py  test_layer_map.py  test_layout.py  test_patcher.py  test_render.py  test_route.py  test_serve.py  test_server.py  test_tapers.py
scripts/: build_landing_viewer.sh  bundle_source.py  bundle_webapp.py  check_wasm_stub.py  generate_showcase.py
www/: .gitignore  biome.json  package.json  source.config.ts
www/content/blog/: agent-driven-design.mdx  ai-for-photonics.mdx  hello-world.mdx  notes-on-layout-editors.mdx
www/content/docs/: index.mdx  test.mdx
www/public/viewer/: index.html  showcase.json
www/scripts/: check-api-docs.py  generate-api-docs.mjs
www/src/: mdx-components.tsx
www/src/app/: global.css  layout.tsx  robots.ts  sitemap.ts
www/src/components/: coming-soon-button.tsx  footer.tsx  header.tsx
www/src/lib/: layout.shared.tsx  source.ts
(+146 files in other folders)
