[workspace]
resolver = "2"
members = [
    "crates/rosette-checks",
    "crates/rosette-core",
    "crates/rosette-dfm",
    "crates/rosette-drc",
    "crates/rosette-io",
    "crates/rosette-python",
    "crates/rosette-wasm",
    "app/src-tauri",
]
# Exclude Tauri desktop app from default builds — it requires platform-specific
# system libraries (GTK, WebKit on Linux) that aren't available in CI.
# Build explicitly with: cargo build -p rosette-desktop
default-members = [
    "crates/rosette-checks",
    "crates/rosette-core",
    "crates/rosette-dfm",
    "crates/rosette-drc",
    "crates/rosette-io",
    "crates/rosette-python",
]

[workspace.package]
version = "0.1.7"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rosette-checks = { path = "crates/rosette-checks" }
rosette-core = { path = "crates/rosette-core" }
rosette-dfm = { path = "crates/rosette-dfm" }
rosette-drc = { path = "crates/rosette-drc" }
rosette-io = { path = "crates/rosette-io" }
geo = { version = "0.29", default-features = false }
rayon = "1.10"
thiserror = "1.0"
byteorder = "1.5"
pyo3 = "0.27"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
