[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rosette"
version = "0.1.0"
description = "Agentic design system for photonic integrated circuits"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "watchfiles>=0.20",
    "libcst>=1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
keywords = ["photonics", "gds", "gdsii", "layout", "chip", "design", "silicon-photonics", "pic", "integrated-circuits", "eda", "pdk", "agentic", "ai"]

[project.scripts]
rosette = "rosette.cli:main"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "maturin>=1.4,<2.0", "ruff>=0.8"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rosette._core"
manifest-path = "crates/rosette-python/Cargo.toml"
python-source = "python"
include = ["python/rosette/_webapp/**/*"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["rosette"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
