[package]
name = "rosette-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rosette GDS Viewer"
default-run = "rosette-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
rosette-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
