[package]
name = "rosette-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for rosette with GPU rendering"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rosette-core = { workspace = true, features = ["serde"] }
rosette-io.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
wgpu = { workspace = true, features = ["webgpu", "webgl"] }
bytemuck.workspace = true
log.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6"
thiserror.workspace = true
futures-channel = "0.3"
earcutr = "0.4"
geo.workspace = true
ttf-parser = "0.24"
uuid = { version = "1.0", features = ["v4", "js"] }

[dependencies.web-sys]
workspace = true
features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
